Fix database configuration for MySQL

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pyparsing~=2.4.7
 django_debug_toolbar~=3.2.2
 djangorestframework~=3.12.4
 django-filter~=2.4.0
+mysqlclient~=2.0.3
 
 # Added django-q for queueing asynchronous tasks. If we end up
 # compressing FITS cube in storage we might not need to queue
