--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,11 @@ mysqlclient~=2.0.3
 slumber~=0.7.1
 ffmpeg-python~=0.2.0
 
-# Added django-q for queueing asynchronous tasks. If we end up
-# compressing FITS cube in storage we might not need to queue
-# it up since just TAR-ing on the fly (without compression)
-# should be feasible for streaming in "real-time".
-django_q~=1.3.9
-
 # Currently used for generating static and animated previews.
 # Likely not going to be relevant in the future if the
 matplotlib~=3.4.3
 
-# django-allauth required to provide a more developed account management
+# django-allauth required to provide a more mature account management
 # flow, with registration that requires email verification, etc.
 django-allauth~=0.45.0
 
